--- a/wavue/packages/wagrid/package.json
+++ b/wavue/packages/wagrid/package.json
@@ -35,15 +35,15 @@
     "clean": "rimraf dist dist-source"
   },
   "peerDependencies": {
-    "naive-ui": "^2.43.1",
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue": "^3.5.18"
   },
   "dependencies": {
     "file-saver": "^2.0.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "naive-ui": "^2.43.1",
+    "vue-router": "^4.5.1",
     "@types/file-saver": "^2.0.5",
     "@types/node": "^22.18.12",
     "@vicons/ionicons5": "^0.13.0",
